# 3S

./: .env.example  .gitignore  README.md  app.js  docker-compose.yml  index.html  styles.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/academics/: domain.py  models.py  router.py  schemas.py
backend/app/admins/: models.py  router.py  schemas.py
backend/app/analytics/: academic_validation.py
backend/app/announcements/: models.py  router.py  schemas.py
backend/app/audit_logs/: models.py  router.py  schemas.py
backend/app/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/logbooks/: domain.py  models.py  router.py  schemas.py
backend/app/messaging/: models.py  router.py  schemas.py
backend/app/notifications/: models.py  router.py  schemas.py
backend/app/parents/: models.py  router.py  schemas.py
backend/app/preparation_cards/: domain.py  models.py  router.py  schemas.py
backend/app/realtime/: connection_manager.py  router.py
backend/app/report_cards/: domain.py  models.py  router.py  schemas.py
backend/app/schedules/: domain.py  models.py  router.py  schemas.py
backend/app/security/: rbac.py
backend/app/shared/: crud.py  schemas.py
backend/app/students/: models.py  router.py  schemas.py
backend/app/teachers/: models.py  router.py  schemas.py
backend/app/users/: models.py  repository.py  router.py  schemas.py  service.py
(+36 files in other folders)
